--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-attrdict==2.0.1
-git+https://github.com/denisyarats/dmc2gym.git
-gym==0.25.2
-numpy==1.21.6
-PyYAML==6.0.1
-torch==2.0.1
-tensorboard==2.8.0
-protobuf==3.20.1
+dm-control==1.0.31
+gymnasium==1.2.0
+hydra-core==1.3.2
+mujoco==3.3.4
+torch
+torchvision
+torchvision-extra-decoders
+tyro==0.9.27
