Implement world model using Mamba-SSM;

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,11 @@
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": ["--disable-logger"]
+            "args": [
+                "--disable-logger",
+                "--algorithm",
+                "alive-v0-mamba"
+            ]
         }
     ]
 }
