Add alive-v0 minimal implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,8 @@
             "console": "integratedTerminal",
             "args": [
                 "--disable-logger",
+                "--config-file",
+                "dmc-walker-run",
                 "--algorithm",
                 "alive-v0-origin"
             ]
